<resources>
    <string name="app_name">Quiz</string>
    <string name="bat_dau">Bắt đầu</string>
    <string name="level_1">Level 1</string>
    <string name="level_5">Level 5</string>
    <string name="level_4">Level 4</string>
    <string name="level_3">Level 3</string>
    <string name="level_2">Level 2</string>
    <string name="exit">Thoát</string>
    <string name="ok">OK</string>
</resources>
