<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/bg_start">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:id="@+id/txtLv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_1"
            android:textSize="24sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_level_corner"
            android:gravity="center"
            android:layout_margin="10dp" />
        <TextView
            android:id="@+id/txtLv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_2"
            android:textSize="24sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_level_corner"
            android:gravity="center"
            android:layout_margin="10dp" />
        <TextView
            android:id="@+id/txtLv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_3"
            android:textSize="24sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_level_corner"
            android:gravity="center"
            android:layout_margin="10dp"/>
        <TextView
            android:id="@+id/txtLv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_4"
            android:textSize="24sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_level_corner"
            android:gravity="center"
            android:layout_margin="10dp" />
        <TextView
            android:id="@+id/txtLv5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/level_5"
            android:textSize="24sp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:textColor="@color/white"
            android:background="@drawable/bg_level_corner"
            android:gravity="center"
            android:layout_margin="10dp" />
    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>