<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center"
    android:padding="10dp"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:background="@drawable/bg_start"
    android:orientation="vertical">

    <com.ramotion.foldingcell.FoldingCell
        android:id="@+id/folding_cell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/cell_content_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_ques_corner"
            android:visibility="gone">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:padding="10dp">
                <TextView
                    android:id="@+id/txtLv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_1"
                    android:textSize="24sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_level_corner"
                    android:gravity="center"
                    android:layout_margin="10dp" />
                <TextView
                    android:id="@+id/txtLv2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_2"
                    android:textSize="24sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_level_corner"
                    android:gravity="center"
                    android:layout_margin="10dp" />
                <TextView
                    android:id="@+id/txtLv3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_3"
                    android:textSize="24sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_level_corner"
                    android:gravity="center"
                    android:layout_margin="10dp"/>
                <TextView
                    android:id="@+id/txtLv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_4"
                    android:textSize="24sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_level_corner"
                    android:gravity="center"
                    android:layout_margin="10dp" />
                <TextView
                    android:id="@+id/txtLv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/level_5"
                    android:textSize="24sp"
                    android:paddingStart="40dp"
                    android:paddingEnd="40dp"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:textColor="@color/white"
                    android:background="@drawable/bg_level_corner"
                    android:gravity="center"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </FrameLayout>

        <FrameLayout
            android:id="@+id/cell_title_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/bat_dau"
                android:textSize="28sp"
                android:gravity="center"
                android:textStyle="bold"
                android:background="@drawable/bg_ques_corner" />
        </FrameLayout>
    </com.ramotion.foldingcell.FoldingCell>

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:textSize="28sp"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"/>

</LinearLayout>
